[package]
name = "rust_new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.105"
actix-web = "4"
reqwest = "0.11.20"
tokio-stream = "0.1.14"
tokio = "1.32.0"
redis = "0.23.3"
threadpool = "1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
mysql_async = "0.32.2"
chrono = "0.4.30"
log = "0.4.20"
env_logger = "0.10.0"
rand = "0.8.5"
